--- a/div3d.css
+++ b/div3d.css
@@ -25,8 +25,8 @@ body {
     padding:                        0;
     -webkit-transform-style:        preserve-3d;
             /*transform-style:      preserve-3d;*/
-    -webkit-perspective:            300px;
-            /*perspective:          300px;*/
+    -webkit-perspective:            450px;
+            /*perspective:          450px;*/
     -webkit-backface-visibility:    hidden;
             /*backface-visibility:  hidden;*/
     pointer-events:                 none;
@@ -50,20 +50,15 @@ body {
             /*transform-origin:     center center;*/
     -webkit-backface-visibility:    hidden;
             /*backface-visibility:  hidden;*/
+
+    -wxebkit-transform-style:        preserve-3d;
+    /*transform-style:      preserve-3d;*/
+    
     -webkit-transform-style:        flat;
             /*transform-style:      flat;*/
+
     -webkit-box-sizing:             border-box;
             /*box-sizing:               border-box;*/
     -webkit-tap-highlight-color:    transparent;
     pointer-events:                 auto;
-}
-
-#s1 {
-    background-color:               lime;
-    width:                          512px;
-    height:                         512px;
-    text-align:                     center;
-    line-height:                    512px;
-    font-size:                      120px;
-    font-weight:                    bold;
 }
