added glmatrix and started sample 2

--- a/sample2.css
+++ b/sample2.css
@@ -3,7 +3,7 @@
             /*perspective:          450px;*/
 }
 
-#s1, #s2 {
+#n1, #n2 {
     width:                          512px;
     height:                         512px;
     text-align:                     center;
@@ -12,13 +12,6 @@
     font-weight:                    bold;
 }
 
-#s1 {
+#n1 {
     background-color:               lime;
-}
-
-#s2 {
-    xbackground-color:              #A0A;
-    background-color:               rgba(200, 0, 200, 0.25);
-    border:							4px solid rgba(255, 255, 255, 0.75);
-    xcolor:							#FFF;
 }
