--- a/div3d.css
+++ b/div3d.css
@@ -25,17 +25,15 @@ body {
     padding:                        0;
     -webkit-transform-style:        preserve-3d;
             /*transform-style:      preserve-3d;*/
-    -webkit-perspective:            450px;
-            /*perspective:          450px;*/
     -webkit-backface-visibility:    hidden;
             /*backface-visibility:  hidden;*/
     pointer-events:                 none;
 }
 
-.group {
+.node {
     position:                       absolute;
-    width:                          0;
-    height:                         0;
+    /*width:                          0;
+    height:                         0;*/
     -webkit-transform-origin:       center center;
             /*transform-origin:     center center;*/
     -webkit-backface-visibility:    hidden;
