--- a/sample1.css
+++ b/sample1.css
@@ -3,22 +3,17 @@
             /*perspective:          450px;*/
 }
 
-#s1, #s2 {
-    width:                          512px;
-    height:                         512px;
+#n1, #n2 {
     text-align:                     center;
-    line-height:                    512px;
+    line-height:                    256px;
     font-size:                      120px;
     font-weight:                    bold;
 }
 
-#s1 {
+#n1 {
     background-color:               lime;
 }
 
-#s2 {
-    xbackground-color:              #A0A;
-    background-color:               rgba(200, 0, 200, 0.25);
-    border:							4px solid rgba(255, 255, 255, 0.75);
-    xcolor:							#FFF;
+#n2 {
+    background-color:               #A0A;
 }
