--- a/sample1.css
+++ b/sample1.css
@@ -3,17 +3,15 @@
             /*perspective:          450px;*/
 }
 
-#n1, #n2 {
+#n1, #n2, #n3, #n4 {
     text-align:                     center;
     line-height:                    256px;
-    font-size:                      120px;
+    font-size:                      200px;
     font-weight:                    bold;
+    color:                          rgba(0, 0, 0, 0.5);
 }
 
-#n1 {
-    background-color:               lime;
-}
-
-#n2 {
-    background-color:               #A0A;
-}
+#n1 { background-color: #A0A; }
+#n2 { background-color: #AA0; }
+#n3 { background-color: #0AA; }
+#n4 { background-color: #AAA; }
