--- a/sample1.css
+++ b/sample1.css
@@ -3,7 +3,7 @@
             /*perspective:          450px;*/
 }
 
-#n1, #n2, #n3, #n4 {
+#f1, #f2, #f3, #f4 {
     text-align:                     center;
     line-height:                    256px;
     font-size:                      200px;
@@ -11,7 +11,7 @@
     color:                          rgba(0, 0, 0, 0.5);
 }
 
-#n1 { background-color: #A0A; }
-#n2 { background-color: #AA0; }
-#n3 { background-color: #0AA; }
-#n4 { background-color: #AAA; }
+#f1 { background-color: #A0A; }
+#f2 { background-color: #AA0; }
+#f3 { background-color: #0AA; }
+#f4 { background-color: #AAA; }
