revamped structure, improved api, started docs

--- a/bin/div3d.css
+++ b/bin/div3d.css
@@ -58,3 +58,12 @@ body {
     -webkit-tap-highlight-color:    transparent;
     pointer-events:                 auto;
 }
+
+.interactive {
+    pointer-events:                 auto;
+}
+
+.content .doubleSided {
+    -webkit-backface-visibility:    visible;
+            backface-visibility:    visible;
+}
