--- a/samples/5.css
+++ b/samples/5.css
@@ -22,3 +22,13 @@
 .b { background-color: #22D; }
 .y { background-color: #FF0; }
 .o { background-color: #F70; }
+
+/*
+.w, .r, .g, .b, .y, .o {
+    pointer-events:                 auto;
+}
+
+.c > div:hover {
+    color: #F0F;
+}
+*/
