billboard appears to be working now

--- a/src/div3d.less
+++ b/src/div3d.less
@@ -1,3 +1,5 @@
+/* FUNCTIONS */
+
 .backface-visibility(@a:hidden) {
     -webkit-backface-visibility: @a;
        -moz-backface-visibility: @a;
@@ -41,6 +43,8 @@
 }
 
 
+
+/* DEFINITIONS */
 
 html, body {
     margin:             0;
